[fix] delete extra space

--- a/src/components/Movie/styles.css
+++ b/src/components/Movie/styles.css
@@ -2,6 +2,7 @@
   width: 200px;
   position: relative;
   margin: 20px;
+  margin-left: 0;
 
   cursor: pointer;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.7), 0 2px 10px 0 rgba(0, 0, 0, 0.7);
